[gd_scene load_steps=6 format=2]

[ext_resource path="res://Levels/Level_0/Scripts/Enemies/Hybrull.gd" type="Script" id=1]
[ext_resource path="res://Levels/Level_0/Assets/Demos/Asset 28Hybrull.png" type="Texture" id=2]

[sub_resource type="AnimationNodeAnimation" id=1]

[sub_resource type="Animation" id=2]
resource_name = "Dash"
length = 1.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("..:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.35, 0.9, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 720, 0 ), Vector2( 720, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("..:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "dash_complete"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "Moving"
tracks/0/type = "value"
tracks/0/path = NodePath("..:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 459.648, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("..:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "reached_end"
} ]
}

[node name="Hybrull" type="Node2D"]
position = Vector2( 720.352, 369.696 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
collision_layer = 4
collision_mask = 16
script = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="KinematicBody2D"]
polygon = PoolVector2Array( -82.3163, -54.3718, 81.8987, -54.6491, 82.1761, 53.8105, -81.7615, 54.3652 )

[node name="Sprite" type="Sprite" parent="KinematicBody2D"]
texture = ExtResource( 2 )

[node name="RayCast2D" type="RayCast2D" parent="KinematicBody2D"]
enabled = true
cast_to = Vector2( 500, 0 )

[node name="Area2D" type="Area2D" parent="KinematicBody2D"]
collision_layer = 4
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="KinematicBody2D/Area2D"]
polygon = PoolVector2Array( -81.2941, -53.7537, 81.8113, -53.56, 81.4238, 54.1438, -81.1005, 54.1438 )

[node name="AnimationTree" type="AnimationTree" parent="KinematicBody2D"]
tree_root = SubResource( 1 )
anim_player = NodePath("MoveAnimationPlayer")
active = true

[node name="MoveAnimationPlayer" type="AnimationPlayer" parent="KinematicBody2D/AnimationTree"]
autoplay = "Moving"
anims/Dash = SubResource( 2 )
anims/Moving = SubResource( 3 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="KinematicBody2D"]
[connection signal="area_entered" from="KinematicBody2D/Area2D" to="KinematicBody2D" method="_on_Area2D_area_entered"]
[connection signal="screen_entered" from="KinematicBody2D/VisibilityNotifier2D" to="KinematicBody2D" method="_on_VisibilityNotifier2D_screen_entered"]
